--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <div class="middle-container">
   <div class="profile">
-    <img class="pfp" src="images/Linus-modified.png" alt="">
+    <img class="pfp" src="images/Linus-modified.png" alt="pfp">
     <h2>Hello.</h2>
     <p>Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
   </div>
@@ -28,12 +28,12 @@
   <div class="skills">
     <h2>My Skills.</h2>
     <div class="skill-row">
-      <img class="skills-pic-list" src="images/checklist.png" alt="">
+      <img class="skills-pic-list" src="images/checklist.png" alt="checklist">
       <h3>Lorem & Ipsum</h3>
       <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
     </div>
     <div class="skill-row">
-      <img class="skills-pic-comp" src="images/computer-modified.png" alt="">
+      <img class="skills-pic-comp" src="images/computer-modified.png" alt="computer">
       <h3>Lorem Ipsum Dolor</h3>
       <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
     </div>
