--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 </head>
 <body>
     <div class="top">
-        <img src="images/cloud.png" alt="cloud" class="topcloud">
+        <img src="cv/cloud.png" alt="cloud" class="topcloud">
         <h1>I'm Angus</h1>
         <h3>a student</h3>
-        <img src="images/cloud.png" alt="cloud" class="bottomcloud">
-        <img class="mountain" src="images/mountain.png" alt="mountain">
+        <img src="cv/cloud.png" alt="cloud" class="bottomcloud">
+        <img class="mountain" src="cv/mountain.png" alt="mountain">
     </div>
 
     <div class="middle-container">
@@ -28,12 +28,12 @@
   <div class="skills">
     <h2>My Skills.</h2>
     <div class="skill-row">
-      <img class="skills-pic-list" src="images/checklist.png" alt="checklist">
+      <img class="skills-pic-list" src="cv/checklist.png" alt="checklist">
       <h3>Lorem & Ipsum</h3>
       <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
     </div>
     <div class="skill-row">
-      <img class="skills-pic-comp" src="images/computer-modified.png" alt="computer">
+      <img class="skills-pic-comp" src="cv/computer-modified.png" alt="computer">
       <h3>Lorem Ipsum Dolor</h3>
       <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
     </div>
